[gd_scene load_steps=11 format=3 uid="uid://ccm0d4g6qej04"]

[ext_resource type="Script" path="res://Scenes/Menus/level_selection.gd" id="1_efbhk"]
[ext_resource type="Texture2D" uid="uid://7fqxnonb12kf" path="res://UI/play_button/playnormal.png" id="1_pkjsh"]
[ext_resource type="FontFile" uid="uid://chm6fioitd66u" path="res://Fonts/fibberish.ttf" id="2_o2aef"]
[ext_resource type="Texture2D" uid="uid://d4algp3t4dj0h" path="res://UI/play_button/playclick.png" id="2_pmsqy"]
[ext_resource type="Texture2D" uid="uid://ddfpeopuuww4j" path="res://UI/play_button/playhover.png" id="3_asve4"]
[ext_resource type="Texture2D" uid="uid://dfn7vilhcsxxp" path="res://UI/back_arrow/back_seta.png" id="4_1un5e"]
[ext_resource type="Texture2D" uid="uid://q0ew6o1yk55t" path="res://UI/back_arrow/back_setaclick.png" id="5_sb12e"]
[ext_resource type="Texture2D" uid="uid://bnq43bfq5vq6w" path="res://UI/play_button/playlocked.png" id="5_t3t6m"]
[ext_resource type="Texture2D" uid="uid://ls0w7ms51gji" path="res://UI/back_arrow/back_setahover.png" id="6_b7tj0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yx341"]

[node name="level_selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_efbhk")

[node name="previous" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -15.5
offset_right = 50.0
offset_bottom = 15.5
grow_vertical = 2
text = "<"

[node name="next" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.5
offset_right = -32.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = ">"

[node name="level_name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_top = 18.0
offset_right = 74.0
offset_bottom = 41.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_o2aef")
text = "1. Old man request"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_texture" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -50.0
offset_right = 88.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_yx341")

[node name="best_score" type="Label" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 125.0
offset_right = 142.0
offset_bottom = 138.0
theme_override_fonts/font = ExtResource("2_o2aef")
theme_override_font_sizes/font_size = 14
text = "Score: 1000"

[node name="best_time" type="Label" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 110.0
offset_right = 161.0
offset_bottom = 123.0
theme_override_fonts/font = ExtResource("2_o2aef")
theme_override_font_sizes/font_size = 14
text = "Best Time 1:52"

[node name="play" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("1_pkjsh")
texture_pressed = ExtResource("2_pmsqy")
texture_hover = ExtResource("3_asve4")
texture_disabled = ExtResource("5_t3t6m")
stretch_mode = 3

[node name="back" type="TextureButton" parent="."]
layout_mode = 0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 48.0
texture_normal = ExtResource("4_1un5e")
texture_pressed = ExtResource("5_sb12e")
texture_hover = ExtResource("6_b7tj0")
stretch_mode = 5

[node name="infinite" type="Button" parent="."]
layout_mode = 0
offset_left = 238.0
offset_top = 19.0
offset_right = 310.0
offset_bottom = 38.0
theme_override_fonts/font = ExtResource("2_o2aef")
theme_override_font_sizes/font_size = 12
text = "Infinite Mode"

[connection signal="mouse_entered" from="previous" to="." method="_on_previous_mouse_entered"]
[connection signal="pressed" from="previous" to="." method="_on_previous_pressed"]
[connection signal="mouse_entered" from="next" to="." method="_on_next_mouse_entered"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="mouse_entered" from="play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="infinite" to="." method="_on_infinite_mouse_entered"]
[connection signal="pressed" from="infinite" to="." method="_on_infinite_pressed"]
